[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui_image_api"
version = "0.1.0"
description = "An API to generate images using Stable Diffusion and ComfyUI"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    { name="Jason L Weirather", email="jason.weirather@gmail.com" }
]
dependencies = [
    "Flask",
    "PyYAML",
    "numpy",
    "click"
]

[project.urls]
"Homepage" = "https://github.com/jason-weirather/comfyui-image-api"

[project.scripts]
comfy-api = "comfyui_image_api.api_server:main"

[tool.setuptools]
package-data = { "comfyui_image_api" = ["Templates/*.yaml","Templates/Workflow_api_json/*.json"] }
include-package-data = true
